# 3Dpic

./: .gitignore  README.md  main.py  pyproject.toml
output/: cameras.ply  scene.json  sparse.ply
output/cache/: feat_00eab9b57b791052.npz  feat_0175830a02f6b1d4.npz  feat_0182919c13084ea1.npz  feat_01d544faad9402e4.npz  feat_0230ff52f69290bf.npz  feat_02c7c3968da509b3.npz  feat_030718b2c32ee917.npz  feat_030fe07828fcfd45.npz  feat_03a23b259ed71f73.npz  feat_04e889a6bfc32449.npz  feat_05f2ddc08c526d21.npz  feat_08cf5589a3a70e58.npz  feat_09bb2ea330b203f3.npz  feat_09cf134cd6dc22f1.npz  feat_09fb15dba961fbdd.npz  feat_0a20a0ea4c31108f.npz  feat_0b7e309bccb3c874.npz  feat_0c5ca5e8938183a5.npz  feat_0e78992ca7c86730.npz  feat_0ee4afc3b950b8b1.npz  feat_0feb87ceb7750198.npz  feat_1045d801f3418762.npz  feat_14bbf0fd644db592.npz  feat_16778f4388849e3b.npz  feat_1713205b0947953f.npz  feat_17575cf99bbf17d0.npz  feat_17678dc919a3f753.npz  feat_1871444faf4f8a6f.npz  feat_19336518c3d499b0.npz  feat_199d06480e1a4f2d.npz  feat_1b20e28ffc87f781.npz  feat_1b9714f74a26926a.npz  feat_1efdfcadd5e8cce0.npz  feat_1f57ca89d012cbe8.npz  feat_203ab126351e41ad.npz  feat_205458ac006487de.npz  feat_20acaa7bcd639407.npz  feat_20c2c12743cab5ca.npz  feat_21d818ff26ef9867.npz  feat_226d2efa10b11cdf.npz  (+216 more)
recon3d/: app.py  bundle.py  cleanup.py  colmap_import.py  config.py  dense.py  features.py  geometry.py  io_utils.py  matching.py  pipeline.py  run.py  scene.py  sfm.py  tracks.py
recon3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
recon3d/gui/: __init__.py  app.py  loader.py  (+9 more)
