[project]
name = "recon3d"
version = "0.1.0"
description = "CPU-only 3D reconstruction pipeline with desktop viewer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
formats = ["gaussforge >= 0.3"]

[project.scripts]
recon3d = "recon3d.run:main"
recon3d-gui = "recon3d.gui.app:main"